# Generative-AI-LLMs

./: README.md
french-medical-consultation/: README.md  french-medical-chatbot.py  pyproject.toml  requirements.txt
french-medical-consultation/dataset/: combined-medical-french-examples.json
