[project]
name = "french-medical-consultation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "elasticsearch>=8,<9",
    "gradio>=6.13.0",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
]
